# fractal

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml
data/: fractal.ebnf  lexer_test.txt  snippet_1.fract
data/fractal_snippets/: s1.fract
data/lexer_tests/: test_1.txt
include/: defines.h  utils.h
include/lexer/: lexer.h  location.h  token.h  utils.h
include/parser/: func_info.h  parser.h  utils.h
src/: main.c  main.rs  utils.c
src/lexer/: lexer.c  location.c  mod.rs  token.c  token.rs  utils.c
src/parser/: func_info.c  mod.rs  parser.c  utils.c
